# aichallenge-2024

./: Dockerfile  docker_build.sh
aichallenge/: change_param.bash  emergency.py  increase_network_buffers.sh  my_kill_all.bash  param_console.tmux  rosdep.bash  run_autoware.bash  run_console.bash  run_juggler.bash  run_rviz.bash  run_rviz_and_sim.bash  run_simulator.bash  slide.xml  start_kart.bash
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml  only_localization.launch.xml  playground.launch.xml  reference.launch.xml  rviz.launch.xml  sanae.launch.xml
aichallenge/workspace/src/aichallenge_submit/sanae_control/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/sanae_control/config/: pid_parameter_safe.yaml  pid_safe.yaml  smc_default.yaml
aichallenge/workspace/src/aichallenge_submit/sanae_control/include/sanae_control/: pid_controller.hpp  simple_pd_controller.hpp  sliding_mode_controller.hpp
aichallenge/workspace/src/aichallenge_submit/sanae_control/src/: pid_controller.cpp  simple_pd_controller.cpp  sliding_mode_controller.cpp
aichallenge/workspace/src/aichallenge_submit/sanae_planner/: package.xml  setup.cfg  setup.py
aichallenge/workspace/src/aichallenge_submit/sanae_planning/: package.xml  setup.cfg  setup.py
aichallenge/workspace/src/aichallenge_submit/simple_pure_pursuit/: package.xml
aichallenge/workspace/src/aichallenge_submit/sys_id/: package.xml  setup.cfg  setup.py
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/: CMakeLists.txt
(+27 files in other folders)
